[package]
name = "bn254"
version = "0.1.0"
edition = "2021"

[dependencies]
ff = { git = "https://github.com/scroll-tech/ff", branch = "feat/sp1", default-features = false, features = ["std"] }
rand = "0.8"
rand_core = { version = "0.6", default-features = false }
serde = { version = "1.0", default-features = false, optional = true }
subtle = "2.4"
getrandom = { version = "0.2", features = ["custom"] }

[target.'cfg(all(target_os = "zkvm", target_vendor = "succinct"))'.dependencies]
sp1-intrinsics = { git = "https://github.com/scroll-tech/sp1-intrinsics.git", branch = "master" }

[features]
default = ["reexport", "bits"]
asm = []
derive_serde = ["serde/derive"]
reexport = []
bits = ["ff/bits"]